--- a/translations/en.json
+++ b/translations/en.json
@@ -19,9 +19,11 @@
   "admissionDate": "Admission Date",
   "admissionWard": "Admission Ward",
   "admittingDoctor": "Admitting Physician",
+  "affection": "Does the child receive affection?",
   "age": "Age",
   "ageGroupDetails": "Age Group Details",
   "ageRange": "{{min}}-{{max}} m",
+  "agreements": "Agreements and Commitments",
   "alcoholUse": "Alcohol Consumption",
   "alcoholUseDuration": "Duration of Alcohol Use",
   "alive": "Alive",
@@ -50,6 +52,7 @@
   "asthma": "Asthma",
   "AtencionesPrenatales": "Prenatal Care",
   "atencionInmediata": "Immediate Newborn Care",
+  "attendedBy": "Attended By",
   "babyGivenVitaminD": "Vitamin D Administered to Baby",
   "babyGivenVitaminK": "Vitamin K Administered to Baby",
   "back": "Back",
@@ -65,6 +68,7 @@
   "birthWeight": "Birth Weight",
   "bloodGroup": "Blood Group",
   "bloodLoss": "Blood Loss",
+  "bloodPressure": "Blood Pressure (mmHg)",
   "bloodPressureAbbreviated": "BP",
   "bloodTransfusion": "Blood Transfusion",
   "bp": "BP",
@@ -72,17 +76,21 @@
   "cancel": "Cancel",
   "cancelAppointment": "Cancel Appointment",
   "cancelAppointmentModalConfirmationText": "Are you sure you want to cancel this appointment?",
+  "cannotDrink": "Cannot drink or breastfeed",
   "Captada": "Captured",
   "CaracterísticaLoquios": "Lochia Characteristics (Blood)",
+  "caregiver": "Who takes care of the child?",
   "caseEncounter": "Case Management Encounters",
   "caseManagemet": "Case Management",
   "caseManager": "Case Manager",
+  "category": "Categoría",
   "causeOfDeath": "Cause of Death",
   "cephaloCaudalNeurologicalEvaluation": "Evaluación Céfalocaudal y Neurológica del Recién Nacido",
   "cervicalDilation": "Cervical Dilation (cm)",
   "chartView": "Chart View",
   "checkForValidity": "Some of the entered values are invalid",
   "chestCircumference": "Chest Circumference",
+  "childImmunizationSchedule": "Esquema de Inmunización Infantil",
   "chooseOption": "Choose an option",
   "chronicDisease": "Chronic Disease",
   "clavicle": "Clavícula",
@@ -100,6 +108,11 @@
   "confirmAppointment": "Confirm Appointment",
   "confirmationQuestion": "Are you sure you want to delete the relationship?",
   "consejeriaLactancia": "Breastfeeding Counseling",
+  "consultationDate": "Consultation Date",
+  "consultationDetails": "Consultation Details",
+  "consultationReason": "Reason for Consultation",
+  "consultationSaved": "Consultation Saved",
+  "consultationTime": "Consultation Time",
   "contact": "Contact",
   "contactCreated": "Contact Created",
   "contacted": "Contacted",
@@ -113,7 +126,9 @@
   "Current pregnancy": "Current Pregnancy",
   "currentAge": "Current Age",
   "customViews": "In this section you will find customized clinical views based on the patient's conditions and care programs.",
+  "dangerSigns": "Danger Signs",
   "dataNowAvailable": "They are now visible on the Perinatal Register",
+  "dataSaved": "Data has been saved successfully.",
   "date": "Date",
   "dateAndTime": "Date and Time",
   "dateDate": "Date and Time",
@@ -136,6 +151,7 @@
   "deposicionesGramos": "Stool (g)",
   "descentOfHead": "Descent of the Head",
   "diabetes": "Diabetes",
+  "diagnoses": "Diagnoses",
   "Diagnóstico": "Diagnosis",
   "disabilities": "Disabilities",
   "discard": "Discard",
@@ -153,11 +169,14 @@
   "earsImplantationOther": "Otros para implantación",
   "earsOther": "Otros para orejas",
   "earsPositionOther": "Otros para ubicación",
+  "ecografia": "Ecografía de obstetricia",
   "EcografíaObstetricia": "Obstetric Ultrasound",
   "EcografíaObstetriciala": "Obstetric Ultrasound",
   "edadGestacional": "Gestational Age (weeks)",
   "EdadgestacionalactualFUM": "Current Gestational Age (LMP)",
   "EdadGestacionalActualFUM": "Current Gestational Age (LMP)",
+  "edadGestacionalEcografia": "Edad gestacional en semanas según ecografía",
+  "edemaGestacional": "Edema gestacional",
   "edit": "Edit",
   "editAppointment": "Edit Appointment",
   "editDose": "Edit Dose Details",
@@ -165,6 +184,7 @@
   "editForm": "Edit Form",
   "edith": "Edit",
   "editThisEncounter": "Edit this Encounter",
+  "embarazoActual": "Embarazo Actual",
   "EmbarazoActual": "Current Pregnancy",
   "Emergencia paciente": "Patient Emergency",
   "encounterDate": "Encounter Date",
@@ -196,10 +216,12 @@
   "ExamenMamas": "Breast Exam",
   "ExamenOdontológico": "Dental Exam",
   "Examenpélvico": "Pelvic Exam",
+  "examenPezon": "Examen de pezón",
   "facility": "Facility",
   "failedDeleting": "Failed to delete",
   "family": "Family",
   "familyContacts": "Family Contacts",
+  "fatherInvolvement": "Does the father participate in care?",
   "Fecha de ingreso": "Admission Date",
   "fechaEmbarazo anterior": "Previous Pregnancy Date",
   "FechaHospitalización": "Hospitalization Date",
@@ -224,10 +246,12 @@
   "fontanelleOther": "Otros para fontanela",
   "formName": "Form Name",
   "formTitle": "Complete the form details",
+  "frecuenciaCardiaca": "Frecuencia Cardíaca",
   "frecuenciaCardiacaFetal": "Fetal Heart Rate (per min.)",
   "frecuenciaRespiratoria": "Respiratory Rate (rpm)",
   "fromAge": "From Age",
   "FUM": "LMP",
+  "gananciaPeso": "Ganancia de peso",
   "genderPreselected": "Gender is preselected based on the profile",
   "genitourinary": "Genito Urinario",
   "genitourinaryElimination": "Eliminación Genito Urinario",
@@ -237,6 +261,7 @@
   "gestationalSize": "Gestational Size",
   "GraficasObstétricas": "Obstetric Charts",
   "growthChart": "Growth Chart",
+  "growthCondition": "Growth Condition",
   "headCircumference": "Head Circumference",
   "heartRate": "Frecuencia cardíaca",
   "height": "Height",
@@ -254,12 +279,18 @@
   "htsTestType": "Test Type",
   "hypertension": "Hypertension",
   "ICM": "ICM",
+  "illnessDuration": "Duration of Illness",
+  "imc": "IMC - índice de masa corporal",
   "immediateEvaluation": "Evaluación inmediata",
   "immediateNewbornAttention": "Atención Inmediata del Recién Nacido",
   "immunization": "Immunization",
   "immunizationPlan": "Vaccination Schedule",
   "immunizationPlanBuilder": "Vaccination Schedule Management",
+  "immunizationTabs": "Lista de pestañas de inmunización",
   "inactiveCases": "Inactive Cases",
+  "indicacionAcidoFolico": "Indicación Acido Fólico",
+  "indicacionCalcio": "Indicación Calcio",
+  "indicacionFierro": "Indicación Fierro/Acido Fólico",
   "inPatient": "Inpatient",
   "inPatientSummary": "Inpatient Summary",
   "inPatientView": "Inpatient View",
@@ -274,6 +305,7 @@
   "lastName": "Last Name",
   "lastPregnancy": "Last Pregnancy Details",
   "lastPregnancyDate": "Date of Last Pregnancy",
+  "lethargy": "Lethargy or coma",
   "limbs": "Extremidades",
   "limbsOther": "Otros para extremidades",
   "listingDate": "Record Date",
@@ -285,12 +317,14 @@
   "loadingPatient": "Loading patient...",
   "location": "Location",
   "male": "Male",
+  "malnutrition": "Severe visible malnutrition",
   "managePeers": "Manage Peers",
   "manager": "Case Manager",
   "manageVaccinationSchedule": "Manage Vaccination Schedule",
   "maritalStatus": "Marital Status",
   "married": "Married",
   "maternalCondition": "Maternal Condition",
+  "maternalHistory": "Antecedentes Maternos",
   "maternalSummary": "Maternal Summary",
   "medicalHistory": "Medical History",
   "medicalHistoryFather": "Medical History of the Father",
@@ -308,6 +342,7 @@
   "motherGeneralCondition": "Mother's General Condition",
   "mouth": "Boca",
   "mouthOther": "Otros para boca",
+  "movimientoFetal": "Movimiento fetal",
   "muscleTone": "Tono Muscular",
   "muscleToneOther": "Otros para tono muscular",
   "name": "Name",
@@ -328,11 +363,13 @@
   "newbornCare": "Newborn Care",
   "newCredEncounter": "New CRED Check",
   "next": "Next",
+  "nextAppointment": "Next Appointment",
   "nextMonth": "Next Month",
   "nextVisitDate": "Next Visit Date",
   "nipples": "Mamilas",
   "no": "No",
   "noActiveCasesToDisplay": "No active cases to display.",
+  "noBreastfeeding": "Does not want to breastfeed or suck",
   "noChartDataAvailable": "No chart data available.",
   "noContactToDisplay": "No contact data to display.",
   "noCurrentAppointments": "No current appointments scheduled for today for this patient.",
@@ -351,6 +388,7 @@
   "nose": "Nariz",
   "noSearchItems": "No vaccines found",
   "noseOther": "Otros para nariz",
+  "nosologicalDiagnosis": "Nosological or Syndromic Diagnosis",
   "notes": "Notes",
   "noUpcomingAppointments": "No upcoming appointments found",
   "noUpcomingAppointmentsForPatient": "No upcoming appointments for this patient",
@@ -358,10 +396,13 @@
   "numeroDeposiciones": "Number of Stools",
   "numeroMicciones": "Number of Urinations",
   "numeroVomito": "Number of Vomits",
+  "nutritionalStatus": "Nutritional Status",
   "observation": "Observación",
+  "observations": "Observations",
   "onDate": "On Date",
   "operatingDoctor": "Operating Physician",
   "optional": "Optional",
+  "orientacion": "Orientación y consejería",
   "Orina / 24h": "Urine / 24h",
   "orinaElimination": "Eliminación de orina",
   "other": "Other",
@@ -372,6 +413,7 @@
   "otrosAntecedentes": "Other History",
   "over90Days": "Mayor de 90 días",
   "oxygenSaturation": "Oxygen Saturation",
+  "paleness": "Severe palmar paleness",
   "parentInformation": "Información a los padres",
   "partnerStatus": "Partner's HIV Status",
   "partograph": "Partograph",
@@ -387,6 +429,7 @@
   "peers": "Peers",
   "pending": "Pending",
   "pendingDocumentations": "Pending Documentation",
+  "perfilBiofisico": "Perfil Biofísico",
   "perinatal": "Maternal-Perinatal Registration",
   "perinatalDataRecorded": "Perinatal Data Recorded",
   "perinatalDataSaveError": "Error saving perinatal data",
@@ -395,7 +438,9 @@
   "pesoMadre": "Mother's Weight (kg)",
   "phoneNumber": "Phone Number",
   "physicalAssault": "1. Has he/she ever hit, kicked, slapped, or otherwise caused you physical harm?",
+  "physicalExam": "Physical Examination",
   "placeOfDelivery": "Place of Delivery",
+  "planParto": "Plan de Parto",
   "pleaseFillField": "Please fill in at least one field",
   "pnsAproach": "PNS Approach",
   "pnsContacts": "PNS Contacts",
@@ -409,6 +454,7 @@
   "preferedPNSAproach": "Preferred PNS Approach",
   "pregnancyOutcome": "Pregnancy Outcome",
   "presentación": "Presentation (C/P/NA)",
+  "presionDiastolica": "Presión diastólica",
   "presionSistolica": "Systolic Pressure (mmHg)",
   "pretermLabor": "Preterm Labor",
   "prev": "Previous",
@@ -417,14 +463,19 @@
   "PrimeraDosisAntitetanica": "1st dose of tetanus vaccine",
   "print": "Print",
   "priorityOfAdmission": "Admission Priority",
+  "proteinuriaGestacional": "Proteinuria gestacional",
   "provider": "Provider",
+  "proximaCita": "Próxima cita",
+  "psychomotorDevelopment": "Psychomotor Development",
   "Puerperio": "Puerperium",
   "PuerperioInmediato": "Immediate Puerperium",
   "recommendedProcedure": "Recommended Procedure",
   "recordLabourDetails": "Record Labor Details",
   "recordNewbornVitals": "Record Neonatal Vital Signs",
   "Referida": "Referred",
+  "referral": "Referral",
   "referrals": "Referrals",
+  "reflejoOsteotendinoso": "Reflejo osteotendinoso",
   "reflexIrritability": "Irritabilidad refleja",
   "relation": "Relationship",
   "relationship": "Relationship",
@@ -443,12 +494,14 @@
   "respiratoryEffort": "Esfuerzo respiratorio",
   "respiratoryRate": "Respiratory Rate",
   "respiratoryRateAbbreviated": "Resp. Rate",
+  "riskFactors": "Risk Factors",
   "RlshipError": "Request failed...",
   "rubeola": "Rubella",
   "saturacionOxigeno": "Oxygen Saturation (O₂ %)",
   "save": "Save",
   "savedRelationship": "Relationship successfully ended",
   "savedRlship": "Relationship saved successfully",
+  "saveError": "Error saving consultation",
   "saveReminder": "Remember to save your changes",
   "saveRlship": "Save Relationship",
   "saveSchema": "Save Schema",
@@ -462,6 +515,7 @@
   "searchVaccine": "Search Vaccine",
   "searchVaccines": "Search Vaccines",
   "SegundaDosisAntitetanica": "2nd dose of tetanus vaccine",
+  "seizures": "Seizures",
   "selectConcept": "Select a Concept",
   "selectDateAndTime": "Select a date and time for the appointment",
   "selectSchema": "Select a Schema",
@@ -520,6 +574,8 @@
   "totalPeers": "Total Peers",
   "tracingNumber": "Tracing Number",
   "tracingType": "Tracing Type",
+  "trauma": "Trauma / Burns",
+  "treatment": "Treatment",
   "Turno": "Shift",
   "type": "Type",
   "typeOfSurgery": "Type of Surgery",
@@ -549,6 +605,7 @@
   "viewBeds": "View Beds",
   "viewEncounter": "View",
   "violencia": "Violence",
+  "visitaDomiciliaria": "Visita domiciliaria",
   "visitDate": "Screening Date",
   "vitals": "Newborn Vital Signs",
   "vitalsAndBiometricsNowAvailable": "They are now visible on the Vital Signs and Biometrics page",
@@ -559,8 +616,11 @@
   "vitaminKAdmin": "Administración de Vitamina K",
   "vomitCount": "Vomit Count",
   "vomitGramsML": "Vomit Volume (g/mL)",
+  "vomiting": "Vomits everything",
   "vomitoGramosML": "Vomit (g/mL)",
   "weight": "Weight (kg)",
+  "wellChildCareTabs": "Lista de pestañas de cuidado del niño sano",
+  "wellChildControls": "Well Child Controls",
   "widowed": "Widowed",
   "Year": "Year",
   "Years": "Years",
