--- a/translations/es.json
+++ b/translations/es.json
@@ -19,9 +19,11 @@
   "admissionDate": "Fecha de Ingreso",
   "admissionWard": "Sala de Ingreso",
   "admittingDoctor": "Médico Admisor",
+  "affection": "Does the child receive affection?",
   "age": "Edad",
   "ageGroupDetails": "Detalles del grupo de edad",
   "ageRange": "{{min}}-{{max}} m",
+  "agreements": "Agreements and Commitments",
   "alcoholUse": "Consumo de Alcohol",
   "alcoholUseDuration": "Duración de Consumo de Alcohol",
   "alive": "Vivo",
@@ -50,6 +52,7 @@
   "asthma": "Asthma",
   "AtencionesPrenatales": "Atenciones Prenatales",
   "atencionInmediata": "Atención Inmediata",
+  "attendedBy": "Attended By",
   "babyGivenVitaminD": "Vitamina D Administrada al Bebé",
   "babyGivenVitaminK": "Vitamina K Administrada al Bebé",
   "back": "Atrás",
@@ -65,6 +68,7 @@
   "birthWeight": "Birth Weight",
   "bloodGroup": "Grupo Sanguíneo",
   "bloodLoss": "Pérdida de Sangre",
+  "bloodPressure": "Blood Pressure (mmHg)",
   "bloodPressureAbbreviated": "PA",
   "bloodTransfusion": "Transfusión de Sangre",
   "bp": "PA",
@@ -72,17 +76,21 @@
   "cancel": "Cancelar",
   "cancelAppointment": "Cancelar cita",
   "cancelAppointmentModalConfirmationText": "¿Está seguro de que desea cancelar esta cita?",
+  "cannotDrink": "Cannot drink or breastfeed",
   "Captada": "Captada",
   "CaracterísticaLoquios": "Característica de los Loquios (Sangre)",
+  "caregiver": "Who takes care of the child?",
   "caseEncounter": "Encuentros de gestión de casos",
   "caseManagemet": "Gestión de Casos",
   "caseManager": "Gestor de Casos",
+  "category": "Categoría",
   "causeOfDeath": "Causa de Muerte",
   "cephaloCaudalNeurologicalEvaluation": "Evaluación Céfalocaudal y Neurológica del Recién Nacido",
   "cervicalDilation": "Dilatación Cervical (cm)",
   "chartView": "Vista Gráfica",
   "checkForValidity": "Algunos valores ingresados no son válidos",
   "chestCircumference": "Circunferencia Torácica",
+  "childImmunizationSchedule": "Esquema de Inmunización Infantil",
   "chooseOption": "Choose an option",
   "chronicDisease": "Enfermedad Crónica",
   "clavicle": "Clavícula",
@@ -100,6 +108,11 @@
   "confirmAppointment": "Confirmar Cita",
   "confirmationQuestion": "¿Está seguro de que desea eliminar la relación?",
   "consejeriaLactancia": "Consejería Lactancia Materna",
+  "consultationDate": "Consultation Date",
+  "consultationDetails": "Consultation Details",
+  "consultationReason": "Reason for Consultation",
+  "consultationSaved": "Consultation Saved",
+  "consultationTime": "Consultation Time",
   "contact": "Contacto",
   "contactCreated": "Contacto Creado",
   "contacted": "Contactado",
@@ -113,7 +126,9 @@
   "Current pregnancy": "Embarazo Actual",
   "currentAge": "Edad Actual",
   "customViews": "En esta sección encontrará vistas clínicas personalizadas según las condiciones del paciente y los programas de atención.",
+  "dangerSigns": "Danger Signs",
   "dataNowAvailable": "They are now visible on the Perinatal Register",
+  "dataSaved": "Data has been saved successfully.",
   "date": "Fecha",
   "dateAndTime": "Fecha y Hora",
   "dateDate": "Fecha y Hora",
@@ -136,6 +151,7 @@
   "deposicionesGramos": "Deposiciones (g)",
   "descentOfHead": "Descenso de la Cabeza",
   "diabetes": "Diabetes",
+  "diagnoses": "Diagnoses",
   "Diagnóstico": "Diagnóstico",
   "disabilities": "Discapacidades",
   "discard": "Descartar",
@@ -153,10 +169,13 @@
   "earsImplantationOther": "Otros para implantación",
   "earsOther": "Otros para orejas",
   "earsPositionOther": "Otros para ubicación",
+  "ecografia": "Ecografía de obstetricia",
   "EcografíaObstetricia": "Ecografía de Obstetricia",
   "edadGestacional": "Edad Gestacional (semanas)",
   "EdadgestacionalactualFUM": "Edad Gestacional Actual (FUM)",
   "EdadGestacionalActualFUM": "Edad Gestacional Actual (FUM)",
+  "edadGestacionalEcografia": "Edad gestacional en semanas según ecografía",
+  "edemaGestacional": "Edema gestacional",
   "edit": "Editar",
   "editAppointment": "Editar una Cita",
   "editDose": "Editar Detalles de la Dosis",
@@ -164,6 +183,7 @@
   "editForm": "Editar Formulario",
   "edith": "Editar",
   "editThisEncounter": "Editar este Encuentro",
+  "embarazoActual": "Embarazo Actual",
   "EmbarazoActual": "Embarazo Actual",
   "Emergencia paciente": "Emergencia del Paciente",
   "encounterDate": "Fecha del Encuentro",
@@ -195,10 +215,12 @@
   "ExamenMamas": "Examen de mamas",
   "ExamenOdontológico": "Examen odontológico",
   "Examenpélvico": "Examen pélvico",
+  "examenPezon": "Examen de pezón",
   "facility": "Establecimiento",
   "failedDeleting": "no se pudo eliminar",
   "family": "Familia",
   "familyContacts": "Contactos familiares",
+  "fatherInvolvement": "Does the father participate in care?",
   "Fecha de ingreso": "Fecha de ingreso",
   "fechaEmbarazo anterior": "Fecha del embarazo anterior",
   "FechaHospitalización": "Fecha de hospitalización",
@@ -223,10 +245,12 @@
   "fontanelleOther": "Otros para fontanela",
   "formName": "Nombre del Formulario",
   "formTitle": "Complete los detalles del formulario",
+  "frecuenciaCardiaca": "Frecuencia Cardíaca",
   "frecuenciaCardiacaFetal": "Frecuencia cardiaca fetal (por min.)",
   "frecuenciaRespiratoria": "Frecuencia Respiratoria (rpm)",
   "fromAge": "Desde Edad",
   "FUM": "FUM",
+  "gananciaPeso": "Ganancia de peso",
   "genderPreselected": "El género está preseleccionado según el perfil",
   "genitourinary": "Genito Urinario",
   "genitourinaryElimination": "Eliminación Genito Urinario",
@@ -236,6 +260,7 @@
   "gestationalSize": "Tamaño Gestacional",
   "GraficasObstétricas": "Graficas Obstétricas",
   "growthChart": "Gráfico de Crecimiento",
+  "growthCondition": "Growth Condition",
   "headCircumference": "Circunferencia de la cabeza",
   "heartRate": "Frecuencia cardíaca",
   "height": "Altura",
@@ -253,12 +278,18 @@
   "htsTestType": "Tipo de prueba",
   "hypertension": "Hypertension",
   "ICM": "ICM",
+  "illnessDuration": "Duration of Illness",
+  "imc": "IMC - índice de masa corporal",
   "immediateEvaluation": "Evaluación inmediata",
   "immediateNewbornAttention": "Atención Inmediata del Recién Nacido",
   "immunization": "Inmunización",
   "immunizationPlan": "Esquema de Vacunación",
   "immunizationPlanBuilder": "Gestión del Esquema de Vacunación",
+  "immunizationTabs": "Lista de pestañas de inmunización",
   "inactiveCases": "Casos Inactivos",
+  "indicacionAcidoFolico": "Indicación Acido Fólico",
+  "indicacionCalcio": "Indicación Calcio",
+  "indicacionFierro": "Indicación Fierro/Acido Fólico",
   "inPatient": "Paciente Internado",
   "inPatientSummary": "Resumen del Paciente Internado",
   "inPatientView": "Vista del Paciente Internado",
@@ -273,6 +304,7 @@
   "lastName": "Apellido",
   "lastPregnancy": "Last Pregnancy Details",
   "lastPregnancyDate": "Date of Last Pregnancy",
+  "lethargy": "Lethargy or coma",
   "limbs": "Extremidades",
   "limbsOther": "Otros para extremidades",
   "listingDate": "Fecha de Registro",
@@ -284,12 +316,14 @@
   "loadingPatient": "Cargando paciente...",
   "location": "Ubicación",
   "male": "Hombre",
+  "malnutrition": "Severe visible malnutrition",
   "managePeers": "Gestionar Pares",
   "manager": "Gestor de Casos",
   "manageVaccinationSchedule": "Gestionar Agenda de Vacunación",
   "maritalStatus": "Estado Civil",
   "married": "Married",
   "maternalCondition": "Condición Materna",
+  "maternalHistory": "Antecedentes Maternos",
   "maternalSummary": "Resumen Materno",
   "medicalHistory": "Historial Médico",
   "medicalHistoryFather": "Medical History of the Father",
@@ -307,6 +341,7 @@
   "motherGeneralCondition": "Condición General de la Madre",
   "mouth": "Boca",
   "mouthOther": "Otros para boca",
+  "movimientoFetal": "Movimiento fetal",
   "muscleTone": "Tono Muscular",
   "muscleToneOther": "Otros para tono muscular",
   "name": "Nombre",
@@ -327,11 +362,13 @@
   "newbornCare": "Atención del Recién Nacido",
   "newCredEncounter": "Nuevo Control CRED",
   "next": "Siguiente",
+  "nextAppointment": "Next Appointment",
   "nextMonth": "Próximo Mes",
   "nextVisitDate": "Próxima Fecha de Visita",
   "nipples": "Mamilas",
   "no": "No",
   "noActiveCasesToDisplay": "No hay datos de casos activos para mostrar.",
+  "noBreastfeeding": "Does not want to breastfeed or suck",
   "noChartDataAvailable": "No hay datos de gráfico disponibles.",
   "noContactToDisplay": "No hay datos de contacto para mostrar.",
   "noCurrentAppointments": "No hay citas programadas para hoy para este paciente.",
@@ -350,6 +387,7 @@
   "nose": "Nariz",
   "noSearchItems": "No se encontraron vacunas",
   "noseOther": "Otros para nariz",
+  "nosologicalDiagnosis": "Nosological or Syndromic Diagnosis",
   "notes": "Notas",
   "noUpcomingAppointments": "No se encontraron citas próximas",
   "noUpcomingAppointmentsForPatient": "No hay citas próximas para este paciente",
@@ -357,10 +395,13 @@
   "numeroDeposiciones": "N° Deposiciones",
   "numeroMicciones": "N° Micciones",
   "numeroVomito": "N° Vómitos",
+  "nutritionalStatus": "Nutritional Status",
   "observation": "Observación",
+  "observations": "Observations",
   "onDate": "En la fecha",
   "operatingDoctor": "Médico Operador",
   "optional": "Opcional",
+  "orientacion": "Orientación y consejería",
   "Orina / 24h": "Orina / 24h",
   "orinaElimination": "Eliminación de orina",
   "other": "Otro",
@@ -371,6 +412,7 @@
   "otrosAntecedentes": "Otros Antecedentes",
   "over90Days": "Mayor de 90 días",
   "oxygenSaturation": "Saturación de oxígeno",
+  "paleness": "Severe palmar paleness",
   "parentInformation": "Información a los padres",
   "partnerStatus": "Estado VIH de la pareja",
   "partograph": "Partograma",
@@ -386,6 +428,7 @@
   "peers": "Pares",
   "pending": "Pendiente",
   "pendingDocumentations": "Documentación Pendiente",
+  "perfilBiofisico": "Perfil Biofísico",
   "perinatal": "Inscripción Materno Perinatal",
   "perinatalDataRecorded": "Perinatal Data Recorded",
   "perinatalDataSaveError": "Error saving perinatal data",
@@ -394,7 +437,9 @@
   "pesoMadre": "Peso Madre (kg)",
   "phoneNumber": "Número de Teléfono",
   "physicalAssault": "1. ¿Alguna vez él/ella lo ha golpeado, pateado, abofeteado u ocasionado daño físico de otra forma?",
+  "physicalExam": "Physical Examination",
   "placeOfDelivery": "Lugar del Parto",
+  "planParto": "Plan de Parto",
   "pleaseFillField": "Por favor, complete al menos un campo",
   "pnsAproach": "Enfoque PNS",
   "pnsContacts": "Historia Social",
@@ -408,6 +453,7 @@
   "preferedPNSAproach": "Enfoque PNS Preferido",
   "pregnancyOutcome": "Pregnancy Outcome",
   "presentación": "Presentación (C/P/NA)",
+  "presionDiastolica": "Presión diastólica",
   "presionSistolica": "Presión Sistólica (mmHg)",
   "pretermLabor": "Preterm Labor",
   "prev": "Anterior",
@@ -416,14 +462,19 @@
   "PrimeraDosisAntitetanica": "1era dosis de vacuna antitetánica",
   "print": "Imprimir",
   "priorityOfAdmission": "Prioridad de Ingreso",
+  "proteinuriaGestacional": "Proteinuria gestacional",
   "provider": "Proveedor",
+  "proximaCita": "Próxima cita",
+  "psychomotorDevelopment": "Psychomotor Development",
   "Puerperio": "Puerperio",
   "PuerperioInmediato": "Puerperio Inmediato",
   "recommendedProcedure": "Procedimiento Recomendado",
   "recordLabourDetails": "Registrar detalles del parto",
   "recordNewbornVitals": "Registrar signos vitales neonatales",
   "Referida": "Referida",
+  "referral": "Referral",
   "referrals": "Derivaciones",
+  "reflejoOsteotendinoso": "Reflejo osteotendinoso",
   "reflexIrritability": "Irritabilidad refleja",
   "relation": "Parentesco",
   "relationship": "Relación",
@@ -442,12 +493,14 @@
   "respiratoryEffort": "Esfuerzo respiratorio",
   "respiratoryRate": "Frecuencia Resp.",
   "respiratoryRateAbbreviated": "F. Resp.",
+  "riskFactors": "Risk Factors",
   "RlshipError": "Falla en la solicitud...",
   "rubeola": "Rubéola",
   "saturacionOxigeno": "Saturación O₂ (%)",
   "save": "Guardar",
   "savedRelationship": "Relación terminada exitosamente",
   "savedRlship": "Relación guardada con éxito",
+  "saveError": "Error saving consultation",
   "saveReminder": "Recuerda guardar tus cambios",
   "saveRlship": "Guardar Relación",
   "saveSchema": "Guardar Esquema",
@@ -461,6 +514,7 @@
   "searchVaccine": "Buscar Vacuna",
   "searchVaccines": "Buscar Vacunas",
   "SegundaDosisAntitetanica": "2da dosis de vacuna antitetánica",
+  "seizures": "Seizures",
   "selectConcept": "Seleccionar un Concepto",
   "selectDateAndTime": "Selecciona una fecha y hora para la cita",
   "selectSchema": "Seleccionar un Esquema",
@@ -519,6 +573,8 @@
   "totalPeers": "Total de Pares",
   "tracingNumber": "N° de Seguimiento",
   "tracingType": "Tipo de Seguimiento",
+  "trauma": "Trauma / Burns",
+  "treatment": "Treatment",
   "Turno": "Turno",
   "type": "Tipo",
   "typeOfSurgery": "Tipo de Cirugía",
@@ -548,6 +604,7 @@
   "viewBeds": "Ver Camas",
   "viewEncounter": "Ver",
   "violencia": "Violencia",
+  "visitaDomiciliaria": "Visita domiciliaria",
   "visitDate": "Fecha de Tamizaje",
   "vitals": "Signos Vitales del Recién Nacido",
   "vitalsAndBiometricsNowAvailable": "Ahora están visibles en la página de Signos Vitales y Datos Biométricos",
@@ -558,8 +615,11 @@
   "vitaminKAdmin": "Administración de Vitamina K",
   "vomitCount": "Recuento de Vómitos",
   "vomitGramsML": "Volumen de Vómito (g/mL)",
+  "vomiting": "Vomits everything",
   "vomitoGramosML": "Vómito (g/mL)",
   "weight": "Peso (kg)",
+  "wellChildCareTabs": "Lista de pestañas de cuidado del niño sano",
+  "wellChildControls": "Well Child Controls",
   "widowed": "Widowed",
   "Year": "Año",
   "Years": "Años",
