--- a/translations/en.json
+++ b/translations/en.json
@@ -15,6 +15,7 @@
   "addPNSContact": "Add PNS Contact",
   "addRelationship": "Add Relationship",
   "address": "Address",
+  "addressPlaceholder": "Physical Address/Landmark",
   "addVaccine": "Add Vaccine",
   "admissionDate": "Admission Date",
   "admissionWard": "Admission Ward",
@@ -133,6 +134,7 @@
   "dateAndTime": "Date and Time",
   "dateDate": "Date and Time",
   "dateOfBirth": "Date of Birth",
+  "dateOfBirthPlaceholder": "mm/dd/yyyy",
   "dateOfDelivery": "Date of Delivery",
   "dateofend": "End Date",
   "dateofstart": "Start Date",
@@ -239,6 +241,7 @@
   "finalDischargeDiagnosis": "Final Discharge Diagnosis",
   "finalOutcome": "Final Outcome",
   "firstName": "First Name",
+  "firstNamePlaceholder": "First name",
   "fluidBalance": "Fluid Balance",
   "foetalPresentation": "Fetal Presentation",
   "followUpDate": "Follow-Up Date",
@@ -303,6 +306,7 @@
   "labourAndDelivery": "Labour and Delivery",
   "lactanciaMaterna": "Breastfeeding",
   "lastName": "Last Name",
+  "lastNamePlaceholder": "Last name",
   "lastPregnancy": "Last Pregnancy Details",
   "lastPregnancyDate": "Date of Last Pregnancy",
   "lethargy": "Lethargy or coma",
@@ -334,6 +338,7 @@
   "MesgestaciónsegundaAntitetánica": "Gestational Month of the Second Tetanus Vaccination",
   "miccionesGramos": "Urinations (g/mL)",
   "middleName": "Middle Name",
+  "middleNamePlaceholder": "Middle name",
   "miscarriage": "Miscarriage",
   "missedAppointmentDate": "Missed Appointment Date",
   "modeOfDelivery": "Mode of Delivery",
@@ -437,6 +442,7 @@
   "Peso": "Weight (Kg)",
   "pesoMadre": "Mother's Weight (kg)",
   "phoneNumber": "Phone Number",
+  "phoneNumberPlaceholder": "Phone number",
   "physicalAssault": "1. Has he/she ever hit, kicked, slapped, or otherwise caused you physical harm?",
   "physicalExam": "Physical Examination",
   "placeOfDelivery": "Place of Delivery",
@@ -510,6 +516,7 @@
   "searchConcepts": "Search Concepts",
   "searchError": "An error occurred while searching.",
   "searchHelper": "Search and select a vaccine to add",
+  "searchPatient": "Search patient",
   "searchSchemas": "Search Schemas",
   "searchVaccination": "Search Vaccination",
   "searchVaccine": "Search Vaccine",
