--- a/translations/es.json
+++ b/translations/es.json
@@ -15,6 +15,7 @@
   "addPNSContact": "Agregar relación",
   "addRelationship": "Agregar relación",
   "address": "Dirección",
+  "addressPlaceholder": "Dirección",
   "addVaccine": "Agregar Vacuna",
   "admissionDate": "Fecha de Ingreso",
   "admissionWard": "Sala de Ingreso",
@@ -133,6 +134,7 @@
   "dateAndTime": "Fecha y Hora",
   "dateDate": "Fecha y Hora",
   "dateOfBirth": "Fecha de Nacimiento",
+  "dateOfBirthPlaceholder": "dd/mm/yyyy",
   "dateOfDelivery": "Fecha de Parto",
   "dateofend": "Fecha de Finalización",
   "dateofstart": "Fecha de Inicio",
@@ -238,6 +240,7 @@
   "finalDischargeDiagnosis": "Diagnóstico Final al Alta",
   "finalOutcome": "Resultado Final",
   "firstName": "Nombre",
+  "firstNamePlaceholder": "Primer Nombre",
   "fluidBalance": "Balance de Líquidos",
   "foetalPresentation": "Presentación Fetal",
   "followUpDate": "Próxima fecha de seguimiento",
@@ -302,6 +305,7 @@
   "labourAndDelivery": "Trabajo de Parto y Parto",
   "lactanciaMaterna": "Lactancia Materna",
   "lastName": "Apellido",
+  "lastNamePlaceholder": "Apellidos",
   "lastPregnancy": "Last Pregnancy Details",
   "lastPregnancyDate": "Date of Last Pregnancy",
   "lethargy": "Lethargy or coma",
@@ -333,6 +337,7 @@
   "MesgestaciónsegundaAntitetánica": "Mes de Gestación de la Segunda Vacunación Antitetánica",
   "miccionesGramos": "Micciones (g/mL)",
   "middleName": "Segundo Nombre",
+  "middleNamePlaceholder": "Segundo Nombre",
   "miscarriage": "Miscarriage",
   "missedAppointmentDate": "Fecha de Cita Incumplida",
   "modeOfDelivery": "Modalidad del Parto",
@@ -436,6 +441,7 @@
   "Peso": "Peso (Kg)",
   "pesoMadre": "Peso Madre (kg)",
   "phoneNumber": "Número de Teléfono",
+  "phoneNumberPlaceholder": "Telefono",
   "physicalAssault": "1. ¿Alguna vez él/ella lo ha golpeado, pateado, abofeteado u ocasionado daño físico de otra forma?",
   "physicalExam": "Physical Examination",
   "placeOfDelivery": "Lugar del Parto",
@@ -509,7 +515,8 @@
   "searchConcepts": "Buscar Conceptos",
   "searchError": "Ocurrió un error al buscar.",
   "searchHelper": "Busca y selecciona una vacuna para agregar",
-  "searchSchemas": "Buscar Esquemas",
+  "searchPatient": "Buscar Paciente",
+  "searchSchemas": "Buscar Esquemas de Vacunación",
   "searchVaccination": "Buscar Vacunación",
   "searchVaccine": "Buscar Vacuna",
   "searchVaccines": "Buscar Vacunas",
