--- a/translations/en.json
+++ b/translations/en.json
@@ -146,7 +146,9 @@
   "defaulterTracing": "Defaulter Tracing",
   "delete": "Delete",
   "deleteRelationship": "Delete Relationship",
+  "deliveryCondition": "Condición del parto",
   "deliveryDate": "Delivery Date",
+  "deliveryLocation": "Lugar del parto",
   "deliveryOutcome": "Delivery Outcome",
   "demographics": "Demographics",
   "department": "Department",
@@ -223,6 +225,7 @@
   "failedDeleting": "Failed to delete",
   "family": "Family",
   "familyContacts": "Family Contacts",
+  "familyRelationshipFormTitle": "Family Relationship Form",
   "fatherInvolvement": "Does the father participate in care?",
   "Fecha de ingreso": "Admission Date",
   "fechaEmbarazo anterior": "Previous Pregnancy Date",
@@ -234,6 +237,7 @@
   "female": "Female",
   "fetalHeartRate": "Fetal Heart Rate",
   "FichaTamizaje": "Screening Form",
+  "field": "Campo",
   "filterByForm": "Filter by Form",
   "filterByStatus": "Filter by Status",
   "filterTable": "Filter Table",
@@ -303,6 +307,7 @@
   "ipvOutcome": "IPV Outcome",
   "ipvOutCome": "IPV Outcome",
   "ipvQuestions": "IPV Questions",
+  "itemsPerPage": "Items per page",
   "labourAndDelivery": "Labour and Delivery",
   "lactanciaMaterna": "Breastfeeding",
   "lastName": "Last Name",
@@ -357,6 +362,7 @@
   "neonatalAbnormalities": "Neonatal Abnormalities",
   "neonatalCare": "Neonatal Care",
   "neonatalCareTabs": "Lista de pestañas de cuidado neonatal",
+  "neonatalCounselery": "Consejeria",
   "NeonatalMonitoring": "Neonatal Vital Signs Monitoring",
   "neonatalProblems": "Neonatal Problems",
   "neonatalSummary": "Neonatal Summary",
@@ -384,6 +390,7 @@
   "noDose": "No Dose",
   "noEncounters": "No encounters found",
   "noEncounterToDisplay": "No encounters to display",
+  "noFamilyHistoryData": "There is no family history data to display for this patient.",
   "noInActiveCasesToDisplay": "No inactive cases to display.",
   "nonCredControl": "Non-CRED Check",
   "noObservationsFound": "No observations found",
@@ -398,12 +405,14 @@
   "noUpcomingAppointments": "No upcoming appointments found",
   "noUpcomingAppointmentsForPatient": "No upcoming appointments for this patient",
   "Nueva Atención Prenatal": "New Prenatal Care",
+  "numberOfPregnancies": "N° de embarazo",
   "numeroDeposiciones": "Number of Stools",
   "numeroMicciones": "Number of Urinations",
   "numeroVomito": "Number of Vomits",
   "nutritionalStatus": "Nutritional Status",
   "observation": "Observación",
   "observations": "Observations",
+  "of": "of",
   "onDate": "On Date",
   "operatingDoctor": "Operating Physician",
   "optional": "Optional",
@@ -418,6 +427,7 @@
   "otrosAntecedentes": "Other History",
   "over90Days": "Mayor de 90 días",
   "oxygenSaturation": "Oxygen Saturation",
+  "pageNumber": "Page number",
   "paleness": "Severe palmar paleness",
   "parentInformation": "Información a los padres",
   "partnerStatus": "Partner's HIV Status",
@@ -426,6 +436,7 @@
   "partographyDisplay": "Displayed Partograph",
   "past": "Past",
   "patient": "Patient",
+  "patientFamilyTable": "Patient family table",
   "patientNotFound": "Patient not found",
   "patientPlaceHolder": "Search patient",
   "peer": "Peer",
@@ -459,6 +470,9 @@
   "preeclampsia": "Preeclampsia",
   "preferedPNSAproach": "Preferred PNS Approach",
   "pregnancyOutcome": "Pregnancy Outcome",
+  "prenatalAntecedents": "Prenatal Antecedents",
+  "prenatalVisitLocation": "Lugar de atenciones prenatales",
+  "prenatalVisits": "N° de atenciones prenatales",
   "presentación": "Presentation (C/P/NA)",
   "presionDiastolica": "Presión diastólica",
   "presionSistolica": "Systolic Pressure (mmHg)",
@@ -592,6 +606,7 @@
   "upcoming": "Upcoming",
   "upcomingAppointments": "Upcoming Appointments",
   "upcomingCheckups": "Upcoming Checkups",
+  "update": "Actualizar",
   "updateError": "Error updating the upcoming appointment",
   "updateForm": "Update Form",
   "updating": "Updating...",
