--- a/translations/es.json
+++ b/translations/es.json
@@ -146,7 +146,9 @@
   "defaulterTracing": "Seguimiento de Incumplidores",
   "delete": "Eliminar",
   "deleteRelationship": "Eliminar Relación",
+  "deliveryCondition": "Condición del parto",
   "deliveryDate": "Fecha de Parto",
+  "deliveryLocation": "Lugar del parto",
   "deliveryOutcome": "Resultado del Parto",
   "demographics": "Datos Demográficos",
   "department": "Departamento",
@@ -222,6 +224,7 @@
   "failedDeleting": "no se pudo eliminar",
   "family": "Familia",
   "familyContacts": "Contactos familiares",
+  "familyRelationshipFormTitle": "Formulario de Relación Familiar",
   "fatherInvolvement": "Does the father participate in care?",
   "Fecha de ingreso": "Fecha de ingreso",
   "fechaEmbarazo anterior": "Fecha del embarazo anterior",
@@ -233,6 +236,7 @@
   "female": "Femenino",
   "fetalHeartRate": "Frecuencia Cardíaca Fetal",
   "FichaTamizaje": "Ficha Tamizaje",
+  "field": "Campo",
   "filterByForm": "Filtrar por formulario",
   "filterByStatus": "Filtrar por estado",
   "filterTable": "Filtrar tabla",
@@ -302,6 +306,7 @@
   "ipvOutcome": "Resultado de IPV",
   "ipvOutCome": "Resultado de IPV",
   "ipvQuestions": "Preguntas IPV",
+  "itemsPerPage": "Elementos por página",
   "labourAndDelivery": "Trabajo de Parto y Parto",
   "lactanciaMaterna": "Lactancia Materna",
   "lastName": "Apellido",
@@ -356,6 +361,7 @@
   "neonatalAbnormalities": "Anormalidades Neonatales",
   "neonatalCare": "Cuidado Neonatal",
   "neonatalCareTabs": "Lista de pestañas de cuidado neonatal",
+  "neonatalCounselery": "Consejeria",
   "NeonatalMonitoring": "Monitoreo de Funciones Vitales",
   "neonatalProblems": "Problemas Neonatales",
   "neonatalSummary": "Resumen Neonatal",
@@ -383,6 +389,7 @@
   "noDose": "Sin Dosis",
   "noEncounters": "No se encontraron encuentros",
   "noEncounterToDisplay": "No hay encuentros para mostrar",
+  "noFamilyHistoryData": "No hay datos de historial familiar para mostrar para este paciente.",
   "noInActiveCasesToDisplay": "No hay datos de casos inactivos para mostrar.",
   "nonCredControl": "Control No CRED",
   "noObservationsFound": "No se encontraron observaciones",
@@ -397,12 +404,14 @@
   "noUpcomingAppointments": "No se encontraron citas próximas",
   "noUpcomingAppointmentsForPatient": "No hay citas próximas para este paciente",
   "Nueva Atención Prenatal": "Nueva Atención Prenatal",
+  "numberOfPregnancies": "N° de embarazo",
   "numeroDeposiciones": "N° Deposiciones",
   "numeroMicciones": "N° Micciones",
   "numeroVomito": "N° Vómitos",
   "nutritionalStatus": "Nutritional Status",
   "observation": "Observación",
   "observations": "Observations",
+  "of": "de",
   "onDate": "En la fecha",
   "operatingDoctor": "Médico Operador",
   "optional": "Opcional",
@@ -417,6 +426,7 @@
   "otrosAntecedentes": "Otros Antecedentes",
   "over90Days": "Mayor de 90 días",
   "oxygenSaturation": "Saturación de oxígeno",
+  "pageNumber": "Número de página",
   "paleness": "Severe palmar paleness",
   "parentInformation": "Información a los padres",
   "partnerStatus": "Estado VIH de la pareja",
@@ -425,6 +435,7 @@
   "partographyDisplay": "Partograma mostrado",
   "past": "Pasado",
   "patient": "Paciente",
+  "patientFamilyTable": "Tabla de familia del paciente",
   "patientNotFound": "Paciente no encontrado",
   "patientPlaceHolder": "Buscar paciente",
   "peer": "Par",
@@ -458,6 +469,9 @@
   "preeclampsia": "Preeclampsia",
   "preferedPNSAproach": "Enfoque PNS Preferido",
   "pregnancyOutcome": "Pregnancy Outcome",
+  "prenatalAntecedents": "Prenatal Antecedents",
+  "prenatalVisitLocation": "Lugar de atenciones prenatales",
+  "prenatalVisits": "N° de atenciones prenatales",
   "presentación": "Presentación (C/P/NA)",
   "presionDiastolica": "Presión diastólica",
   "presionSistolica": "Presión Sistólica (mmHg)",
@@ -591,6 +605,7 @@
   "upcoming": "Próximo",
   "upcomingAppointments": "Próximas citas",
   "upcomingCheckups": "Próximos controles",
+  "update": "Actualizar",
   "updateError": "Error al actualizar la cita próxima",
   "updateForm": "Modificar formulario",
   "updating": "Actualizando...",
